--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,7 +5,7 @@
 @layer base {
   :root {
     /* Nueva Paleta para el sitio público */
-    --background: 48 83% 95%; /* #fcf9ec - Pale Gold */
+    --background: 53 38% 91%; /* #F4F1DE - Warm Beige */
     --foreground: 224 71.4% 4.1%;
 
     --card: 0 0% 100%;
