Ahora no se cambia de color :(

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -113,7 +113,7 @@
     --ring: 347 77% 40%;
   }
 
-  .sales-dashboard.theme-military {
+  .sales-dashboard.theme-military-green {
     --primary: 84 20% 30%;
     --primary-foreground: 84 20% 95%;
     --secondary: 84 20% 97%;
